# FTR-Assessment

./: README.md
DataEntry/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  CommandObserver.h  CommandReader.cpp  CommandReader.h  DataEntryEngine.cpp  DataEntryEngine.h  DataTable.cpp  DataTable.h  FibonacciList  FibonacciMatcher.cpp  FibonacciMatcher.h  main.cpp
UnitTests/: BigNumber_Fixture.cpp  BigNumber_Fixture.h  BigNumber_Tests.cpp  CMakeLists.txt  DataTable_Fixture.cpp  DataTable_Fixture.h  DataTable_Tests.cpp  FibMatch_Fixture.cpp  FibMatch_Fixture.h  FibMatch_Tests.cpp  main.cpp
